# dices

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
ast/: Cargo.toml
ast/macros/: Cargo.toml
ast/macros/src/: derive.rs  lib.rs
ast/src/: expression.rs  fmt.rs  ident.rs  intrisics.rs  lib.rs  matcher.rs  value.rs
ast/src/expression/: bin_ops.rs  parse.rs  ref_.rs  scope.rs  set.rs  un_ops.rs
ast/src/matcher/: parse.rs
ast/src/value/: boolean.rs  closure.rs  intrisics.rs  list.rs  map.rs  null.rs  number.rs  parse.rs  serde.rs  tests.rs
ast/src/value/serde/: deserialize_from_value.rs  serialize_to_value.rs
dices-ast/: Cargo.toml  README.md
dices-ast/examples/: parse.rs
dices-ast/src/: fmt.rs  ident.rs  intrisics.rs  lib.rs  matcher.rs  parse.rs  version.rs
dices-ast/src/expression/: bin_ops.rs  call.rs  closure.rs  list.rs  map.rs  member_access.rs  mod.rs  parse.rs  ref_.rs  scope.rs  set.rs  un_ops.rs
dices-ast/src/matcher/: mod.rs  parse.rs
dices-ast/src/value/: boolean.rs  closure.rs  intrisics.rs  list.rs  map.rs  mod.rs  null.rs  number.rs  parse.rs  string.rs
dices-ast/src/value/serde/: deserialize_from_value.rs  mod.rs  serialize_to_value.rs
dices-ast/src/values/: bl.rs  boolean.rs  closure.rs  intrisics.rs  list.rs  map.rs  mod.rs  null.rs  number.rs  string.rs  tests.rs
dices-engine/: Cargo.toml
dices-engine/examples/: repl.rs
dices-engine/src/: context.rs  dices_std.rs  lib.rs
dices-engine/src/solve/: expression.rs  mod.rs  value.rs
dices-engine/src/solve/expression/: bin_ops.rs  closures.rs  intrisics.rs  mod.rs  recursion_guard.rs  un_ops.rs
dices-man/: Cargo.toml  build.rs
dices-man/man/: index.yml  introduction.md
dices-man/man/operators/: arithmetic.md  index.yml  joining.md  throwing.md
dices-man/man/std/: index.yml
dices-man/man/std/conversions/: from_json.md  index.yml  to_json.md  to_number.md  to_string.md
dices-man/man/std/repl/: help.md  index.yml  print.md
dices-man/man/std/sys/: index.yml  time.md
dices-man/man/std/variadics/: index.yml  join.md  sum.md
dices-man/man/types/: closures.md  introduction.md  ints.md  maps.md  nulls.md
dices-man/src/: example.rs  lib.rs  tests.rs
dices-mantest/: Cargo.toml  build.rs
dices-mantest/src/: _test_impl.rs  lib.rs
dices-repl/: Cargo.toml
dices-repl/src/: lib.rs  repl_intrisics.rs
dices-server/: .env.local  Cargo.toml  compose.yaml  db-model.sql
dices-server/entity/: Cargo.toml
dices-server/migration/: Cargo.toml
dices-server/migration/src/: m20241023_221153_create_table_users.rs
dices-server/src/: commons.rs  lib.rs  main.rs  version.rs
dices-server/src/common/: mod.rs
dices-server/src/common/application/: mod.rs
dices-server/src/entities/: README.md  prelude.rs  session.rs  user.rs
dices-server/src/user/: application.rs  domain.rs  infrastructure.rs  mod.rs
dices-server/src/user/domain/: models.rs  security.rs
dices-server/tests/: version.rs
dices-server/tests/common/: mod.rs
engine/: Cargo.toml
engine/examples/: repl.rs
engine/src/: context.rs  display.rs  expr.rs  identifier.rs  intrisics.rs  lib.rs  namespace.rs  parser.rs  pretty.rs  solve.rs  std_lib.rs  value.rs
engine/src/solve/: expression.rs  value.rs
engine/src/solve/expression/: bin_ops.rs  closures.rs  intrisics.rs  un_ops.rs
examples/: parse.rs
man/: Cargo.toml  build.rs
man/man/: introduction.md  variables.md
man/man/operators/: arithmetic.md  filters.md  repeat.md
man/man/std/: index.yml  intrisics.md  prelude.md  rng.md
man/man/std/conversions/: parse.md  to_list.md
man/man/std/repl/: help.md  index.yml  quit.md
man/man/std/sys/: files.md
man/man/std/variadics/: call.md  mult.md
man/man/std/versions/: ast.md  index.yml
man/man/types/: bools.md  index.yml  intrisics.md  lists.md  maps.md  strings.md
man/pages/: index.yaml  introduction.md  types.md
man/pages/intrisics/: help.md  index.yaml
man/pages/operators/: index.yaml  plus.md
man/pages/operators/math/: index.yaml  plus.md
man/src/: example.rs  lib.rs  report.rs  tests.rs
mantest/: Cargo.toml  build.rs
mantest/src/: _test_impl.rs
repl/: Cargo.toml
repl/src/: intrisics.rs  lib.rs  main.rs  repl_intrisics.rs  setup.rs
server/: Cargo.toml  DicesServer.toml  README.md  build.rs
server.old/: Cargo.toml
server.old/src/: app.rs  lib.rs  main.rs
server.old/src/domains/: user.rs
server.old/src/domains/sessions/: infrastructure.rs
server.old/src/domains/user/: infrastructure.rs
server.old/tests/: user.rs
server.old/tests/common/: mod.rs
server/auth/: Cargo.toml
server/auth/src/: auth_key.rs  claims.rs  lib.rs  user.rs
server/docker/: DicesServer.toml
server/dtos/: Cargo.toml
server/dtos/src/: engine.rs  errors.rs  lib.rs  paginated.rs  session.rs  session_user.rs  user.rs
server/entities/: Cargo.toml
server/entities/src/: engine.rs  lib.rs  log.rs  prelude.rs  sea_orm_active_enums.rs  session.rs  session_user.rs  user.rs
server/intrisics/: Cargo.toml
server/intrisics/src/: lib.rs  log.rs
server/local/: .env.local  README.md  compose.yaml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20241023_221153_create_table_users.rs  m20241101_171000_create_table_sessions.rs  m20241210_211300_create_table_engines.rs  m20241230_125700_create_table_logs.rs  main.rs
server/src/: app.rs  banner.rs  boot.rs  config.rs  domains.rs  lib.rs  logging.rs  main.rs  user.rs  version.rs
server/src/app/: connection.rs
server/src/boot/: cli.rs  logging.rs
server/src/domains/: auth.rs  commons.rs  sessions.rs  user.rs  version.rs
server/src/entities/: mod.rs  prelude.rs  sea_orm_active_enums.rs  session_user.rs
server/src/sessions/: application.rs  domain.rs  mod.rs
server/src/user/: application.rs  mod.rs
server/tests/: auth.rs  sessions.rs  user.rs  version.rs
server/tests/auth/: signin.rs  signup.rs
server/tests/common/: infrastructure.rs  mod.rs
server/tests/sessions/: create.rs  info.rs  list.rs
server/tests/user/: delete.rs  info.rs  signin.rs  signup.rs  update.rs
version/: Cargo.toml
version/src/: lib.rs
(+42 files in other folders)
