[workspace]
members = [
    "ast",
    "engine",
    "man",
    "mantest",
    "repl",
    "server",
    "server/migration",
    "server/entities",
    "server/dtos",
    "server/auth",
    "server/intrisics",
    "version",
    "ast/macros",
]
default-members = ["repl"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
missing_const_for_fn = "warn"
map_unwrap_or = "warn"
redundant_closure_for_method_calls = "warn"

[workspace.package]
version = "0.3.2"
edition = "2021"
authors = ["zannabianca1997 <zannabianca199712@gmail.com>"]
license = "MIT"
