[package]
name = "dices-ast"
version = "0.3.0"
edition = "2021"
authors = ["zannabianca1997 <zannabianca199712@gmail.com>"]

[features]
# Add the ability of parsing a value from a string
parse_value = ["dep:peg", "dep:either"]
# Add the ability of parsing an expression from a string
parse_expression = ["dep:peg", "dep:either"]

# Add the representation of a matcher checking if a value is of a given shape
# Used in checking the example from the manual
matcher = []
# Add the parsing of a matcher from a string
parse_matcher = ["matcher", "dep:peg", "dep:either"]

# Add the ability to generate random `dices` number
rand = ["dep:rand", "num-bigint/rand"]

# Enable serialization and deserialization of values to other format (eg. JSON)
serde = ["dep:serde", "bincode", "dep:serde_bytes", "num-bigint/serde"]
# Enable serialization and deserialization of values and expressions to a byte string
bincode = ["dep:bincode"]

###     AST CHANGING FEATURES      ###
# These feature change the dices AST #

# Add the intrisics used to manipulate json inside `dices`
json = []

[dependencies]
derive_more = { version = "1.0.0", features = [
    "from",
    "as_ref",
    "deref",
    "deref_mut",
    "display",
    "into",
    "error",
    "add",
    "add_assign",
    "mul",
    "mul_assign",
    "not",
    "unwrap",
    "try_unwrap",
] }
either = { version = "1.13.0", optional = true }
itertools = "0.13.0"
lazy-regex = "3.2.0"
peg = { version = "0.8.4", optional = true }
phf = { version = "0.11.2", features = ["macros"] }
nunny = "0.2.1"
pretty = { version = "0.12.3", optional = true }
num-bigint = { version = "0.4.6" }
rand = { version = "0.8.5", optional = true }
enum-as-inner = "0.6.1"
bincode = { version = "2.0.0-rc.3", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.15", optional = true }
konst = { version = "0.3.9", default-features = false, features = ["parsing"] }
