[package]
name = "dices-engine"
version = "0.3.0"
edition = "2021"
authors = ["zannabianca1997 <zannabianca199712@gmail.com>"]

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
dices-ast = { path = "../dices-ast" }
itertools = "0.13.0"
nunny = "0.2.1"
rand = "0.8.5"
either = "1.13.0"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
