[package]
name = "dices-man"
version = "0.3.0"
edition = "2021"

[dependencies]
phf = "0.11.2"
either = "1.13.0"
markdown = "1.0.0-alpha.20"
nunny = "0.2.1"
lazy-regex = "3.3.0"
elsa = "1.10.0"
rand = { version = "0.8.5", features = ["small_rng"] }
dices-engine = { path = "../dices-engine" }
dices-ast = { path = "../dices-ast", features = ["matcher"] }

[build-dependencies]
phf_codegen = "0.11.2"
quote = "1.0.37"
anyhow = "1.0.86"
proc-macro2 = "1.0.86"
serde = { version = "1.0.209", features = ["derive"] }
lazy-regex = "3.3.0"
serde_yaml = "0.9.34"
