[package]
name = "dices-man"
version = "0.3.0"
edition = "2021"

[features]
test_std_handle = []

[dependencies]
phf = "0.11.2"
markdown = "1.0.0-alpha.20"
nunny = "0.2.1"
lazy-regex = "3.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
dices-engine = { path = "../dices-engine" }
dices-ast = { path = "../dices-ast", features = ["matcher"] }
pretty = "0.12.3"
itertools = "0.13.0"
typed-arena = "2.0.2"
mdast2minimad = { git = "https://github.com/zannabianca1997/mdast2minimad.git" }

[build-dependencies]
phf_codegen = "0.11.2"
quote = "1.0.37"
anyhow = "1.0.86"
proc-macro2 = "1.0.86"
serde = { version = "1.0.209", features = ["derive"] }
lazy-regex = "3.3.0"
serde_yaml = "0.9.34"
