[package]
name = "dices-mantest"
version = "0.3.0"
edition = "2021"
authors = ["zannabianca1997 <zannabianca199712@gmail.com>"]

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
dices-ast = { path = "../dices-ast", features = ["matcher"] }
dices-engine = { path = "../dices-engine" }
dices-man = { path = "../dices-man" }


[build-dependencies]
markdown = "1.0.0-alpha.20"
quote = "1.0.37"
anyhow = "1.0.86"
proc-macro2 = "1.0.86"
dices-man = { path = "../dices-man" }
slug = "0.1.6"
