[package]
name = "dices-mantest"
version = "0.3.0"
edition = "2021"
authors = ["zannabianca1997 <zannabianca199712@gmail.com>"]

[dev-dependencies]
rand = "0.8.5"
dices-engine = { path = "../dices-engine" }
dices-man = { path = "../dices-man" }
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }

[build-dependencies]
markdown = "1.0.0-alpha.20"
quote = "1.0.37"
anyhow = "1.0.86"
proc-macro2 = "1.0.86"
dices-man = { path = "../dices-man" }
slug = "0.1.6"
