[package]
name = "dices-repl"
version = "0.3.0"
edition = "2021"
description = "A `REPL` to communicate with a `dices` session"

[dependencies]
mdast2minimad = { git = "https://github.com/zannabianca1997/mdast2minimad.git" }
dices-man = { path = "../dices-man" }
dices-engine = { path = "../dices-engine" }
dices-ast = { path = "../dices-ast" }
termimad = "0.30.0"
clap = { version = "4.5.16", features = ["derive"] }
reedline = "0.34.0"
derive_more = { version = "1.0.0", features = ["error", "display", "debug"] }
atty = "0.2.14"
chrono = "0.4.38"
rand = { version = "0.8.5", features = ["small_rng"] }
