[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "either/serde"]

[[example]]
name = "repl"
required-features = ["pretty"]

[dependencies]
either = { version = "1.12.0" }
itertools = "0.13.0"
lazy-regex = { version = "3.1.0", features = ["unicode"] }
peg = "0.8.3"
phf = { version = "0.11.2", features = ["macros"] }
pretty = { version = "0.12.3", optional = true }
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive", "rc"], optional = true }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rustyline = "14.0.0"
