[package]
name = "engine"
description = "The dices engine"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "either/serde"]
parse = ["dep:peg"]

[dependencies]
either = { version = "1.12.0" }
itertools = "0.13.0"
lazy-regex = { version = "3.1.0", features = ["unicode"] }
peg = { version = "0.8.3", optional = true }
phf = { version = "0.11.2", features = ["macros"] }
pretty = { version = "0.12.3", optional = true }
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive", "rc"], optional = true }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
