[package]
name = "dices-mantest"
description = "Run the example of the `dices` manual as tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dev-dependencies]
rand = "0.8"
dices-engine = { path = "../engine" }
dices-man = { path = "../man" }
rand_xoshiro = { version = "0.6", features = ["serde1"] }

[build-dependencies]
markdown = "1.0.0-alpha.20"
quote = "1.0"
anyhow = "1.0"
proc-macro2 = "1.0"
dices-man = { path = "../man" }
slug = "0.1"
