[package]
name = "dices-repl"
description = "A `REPL` to communicate with a `dices` session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dices"
path = "src/main.rs"

[dependencies]
mdast2minimad = "0.1"
dices-man = { path = "../man" }
dices-engine = { path = "../engine", features = ["eval_str"] }
dices-ast = { path = "../ast" }
termimad = "0.31"
clap = { version = "4.5", features = ["derive"] }
reedline = "0.38"
derive_more = { version = "1.0", features = [
    "debug",
    "display",
    "error",
    "from",
] }
atty = "0.2"
chrono = "0.4"
rand = "0.8"
pretty = "0.12"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["env", "toml"] }
home = "0.5"
rand_xoshiro = { version = "0.6", features = ["serde1"] }
typed-arena = "2.0.2"

[dev-dependencies]
dices-man = { path = "../man", features = ["test_std_handle"] }
