[package]
name = "dices-version"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bincode = { version = "2.0.0-rc.3", optional = true }
derive_more = { version = "1.0", features = ["display", "error"] }
konst = { version = "0.3", default-features = false, features = ["parsing"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
utoipa = { version = "5.0", optional = true }
