[package]
name = "dices-server-auth"
description = "Authentication flow for the `dices` server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dices-server-entities = { path = "../entities" }
dices-server-dtos = { path = "../dtos" }

sea-orm = "1.1"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
argon2 = "0.5"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
thiserror = "2.0"
derive_more = { version = "1.0", features = ["from"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tracing = "0.1"
jwt = "0.16"
serde_with = "3.11"
utoipa = "5.3"
