[package]
name = "dices-server-dtos"
description = "Data structures for the server API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dices-server-entities = { path = "../entities" }
dices-server-intrisics = { path = "../intrisics" }
dices-ast = { path = "../../ast", features = ["parse_expression"] }

serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.11", features = ["chrono", "json", "schemars_0_8"] }
http = "1.2"
serde_repr = "0.1"
axum = { version = "0.8", features = ["json", "macros"] }
thiserror = "2.0"
derive_more = { version = "1.0", default-features = false, features = ["from"] }
jwt = "0.16"
axum-extra = { version = "0.10", features = ["typed-header"] }
sea-orm = { version = "1.1", default-features = false }
either = "1.13"
tracing = "0.1"
argon2 = { version = "0.5", default-features = false, features = ["std"] }
utoipa = "5.3"
chrono = { version = "0.4", features = ["serde"] }
nunny = { version = "0.2", features = ["serde"] }
tokio = { version = "1.43" }
