[package]
name = "dices-server-entities"
description = "Entity definition for the dices server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sea-orm = { version = "1.1", features = ["sqlx-postgres"] }
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "1.0", default-features = false, features = [
    "from",
    "into",
    "display",
] }
uuid = { version = "1.11", features = ["fast-rng", "v4"] }
utoipa = { version = "5.3", features = ["chrono", "uuid"] }
chrono = "0.4"
