[package]
name = "dices-server-entities"
description = "Entity definition for the dices server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dices-ast = { path = "../../ast", features = ["serde"] }
dices-engine = { path = "../../engine", features = ["bincode"] }
dices-server-intrisics = { path = "../intrisics" }

sea-orm = { version = "1.1", features = ["sqlx-postgres"] }
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "1.0", default-features = false, features = [
    "from",
    "into",
    "display",
] }
uuid = { version = "1.11", features = ["fast-rng", "v4"] }
utoipa = { version = "5.3", features = ["chrono", "uuid"] }
chrono = "0.4"
serde_json = "1.0"
bincode = "2.0.0-rc.3"
tracing = "0.1"
