[package]
name = "dices-server-intrisics"
description = "Definition of the server intrisics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dices-ast = { path = "../../ast" }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
